# crater

./: .appveyor.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  appveyor.yml  blacklist.md  build.rs  config.toml  find-bad-crates.py  gh-apps.txt  gh-candidates.txt  rust-toolchain  rustfmt.toml  todo.md  tokens.example.toml
.cargo/: config.toml
.github/workflows/: bors.yml  ci.yml  pr.yml  zizmor-audit.yml
assets/: report.css  report.js  ui.css
ci/before/: lint.sh
ci/run/: check-release-linux.sh  docker-env-linux.sh  lint.sh  minicrater-linux.sh  test-linux.sh
docker/: Dockerfile  Dockerfile.full  Dockerfile.mini  run.sh  run2.sh
docker/env/: Dockerfile  build.sh
docs/: agent-http-api.md  agent-machine-setup-windows.md  agent-machine-setup.md  bot-usage.md  build-environment.md  cli-usage.md  legacy-workflow.md  report-triage.md  tmp-edition.md
local-crates/: README.md
local-crates/beta-faulty-deps/: Cargo.toml
local-crates/beta-fixed/: Cargo.toml  build.rs
local-crates/beta-fixed/src/: main.rs
local-crates/beta-regression/src/: main.rs
local-crates/broken-cargotoml/: Cargo.toml
local-crates/build-fail/: Cargo.toml
local-crates/build-fail/src/: main.rs
local-crates/build-pass/: Cargo.toml
local-crates/build-script-fail/: Cargo.toml  build.rs
local-crates/clippy-warn/: Cargo.toml
local-crates/clippy-warn/src/: main.rs
local-crates/docs-rs-features/: Cargo.toml
local-crates/docs-rs-features/src/: lib.rs
local-crates/error-code/: Cargo.toml  build.rs
local-crates/error-code/src/: lib.rs
local-crates/faulty-deps/: Cargo.toml
local-crates/faulty-deps/src/: main.rs
local-crates/ice-regression/: Cargo.toml
local-crates/ice-regression/src/: main.rs
local-crates/memory-hungry/: Cargo.toml  build.rs
local-crates/memory-hungry/src/: allocate.rs  main.rs
local-crates/missing-examples/: Cargo.toml
local-crates/network-access/: Cargo.toml  build.rs
local-crates/network-access/src/: main.rs  network.rs
local-crates/outdated-lockfile/: Cargo.toml
local-crates/test-fail/: Cargo.toml
local-crates/test-fail/src/: main.rs
local-crates/yanked-deps/: Cargo.toml
rustwide/: Cargo.toml  build.rs
rustwide/examples/: docs-builder.rs
rustwide/src/: build.rs  lib.rs  logging.rs  prepare.rs  toolchain.rs  utils.rs  workspace.rs
rustwide/src/cmd/: mod.rs  sandbox.rs
rustwide/src/crates/: cratesio.rs  git.rs  local.rs  mod.rs
rustwide/src/native/: mod.rs  unix.rs  windows.rs
rustwide/src/tools/: binary_crates.rs  mod.rs  rustup.rs
rustwide/tests/: logging_init_with.rs  logging_not_initialized.rs
src/: assets.rs  blobject.rs  bmk.rs  checkpoint.rs  cli.rs  compare.rs  config.rs  crates.rs  dirs.rs  dl.rs  docker.rs  errors.rs  ex.rs  ex_prepare.rs  ex_run.rs  experiments.rs  file.rs  gh.rs  gh_mirrors.rs  git.rs  home.rs  job.rs  lib.rs  lists.rs  log.rs  main.rs  model.rs  prelude.rs  registry.rs  report.css  report.html  report.js  report.rs  results.rs  run.rs  run_graph.rs  tasks.rs  timings.rs  toml_frobber.rs  toolchain.rs  (+2 more)
src/actions/: mod.rs
src/actions/experiments/: create.rs  delete.rs  edit.rs  mod.rs
src/actions/lists/: mod.rs  update.rs
src/agent/: api.rs  mod.rs  results.rs
src/crates/: lists.rs  mod.rs
src/crates/sources/: github.rs  local.rs  mod.rs  registry.rs
src/db/: migrations.rs  mod.rs
src/experiments/: experiment_chunks.rs  mod.rs
src/logs/: mod.rs  storage.rs
src/native/: unix.rs  windows.rs
src/report/: analyzer.rs  archives.rs  display.rs  html.rs  markdown.rs  mod.rs  s3.rs
src/results/: db.rs  dummy.rs  file.rs  mod.rs
src/runner/: cleanup.rs  graph.rs  mod.rs  prepare.rs  tasks.rs  test.rs  toml_frobber.rs  unstable_features.rs  worker.rs
src/runner/worker/: test.rs
src/server/: agent.rs  agents.rs  api.rs  api_types.rs  auth.rs  cronjobs.rs  experiments.rs  github.rs  http.rs  messages.rs  metrics.rs  mod.rs  reports.rs  results.rs  tokens.rs  try_builds.rs  webhooks.rs
src/server/db/: migrations.rs  mod.rs
src/server/routes/: agent.rs  metrics.rs  mod.rs  ui.rs  webhooks.rs
src/tools/: binary_crates.rs  mod.rs  rustup.rs
src/utils/: disk_usage.rs  fs.rs  hex.rs  http.rs  macros.rs  mod.rs  path.rs  serialize.rs  size.rs  string.rs
static/: queue.css  report.css  report.html  report.js
template/: queue.html  report.html
templates/: 404.html  500.html  agents.html  experiment.html  layout.html  macros.html  queue.html  report.html
templates/report/: downloads.html  layout.html  results.html
templates/ui/: 404.html  500.html  agents.html  experiment.html  layout.html  queue.html
tests/: integration.rs
tests/check-config/: bad_config1.toml  bad_config2.toml  bad_config3.toml  bad_config4.toml  good_config.toml  test_check_config.sh
tests/check_config/: bad-duplicate-crate.toml  bad-duplicate-repo.toml  bad-missing-crate.toml  bad-missing-repo.toml  good.toml  mod.rs
tests/common/: cli_utils.rs  mod.rs
tests/minicrater/: README.md  config.toml  driver.rs  mod.rs  results.expected.json
tests/minicrater/blacklist/: config.toml  downloads.html.context.expected.json  full.html.context.expected.json  index.html.context.expected.json  markdown.md.context.expected.json  results.expected.json
tests/minicrater/clippy/: config.toml  downloads.html.context.expected.json  full.html.context.expected.json  index.html.context.expected.json  markdown.md.context.expected.json  results.expected.json
tests/minicrater/doc/: config.toml  downloads.html.context.expected.json  full.html.context.expected.json  index.html.context.expected.json  markdown.md.context.expected.json  results.expected.json
tests/minicrater/full/: config.toml  downloads.html.context.expected.json  full.html.context.expected.json  index.html.context.expected.json  markdown.md.context.expected.json  results.expected.json
tests/minicrater/ignore-blacklist/: config.toml  downloads.html.context.expected.json  full.html.context.expected.json  index.html.context.expected.json  markdown.md.context.expected.json  (+1 more)
(+24 files in other folders)
