[package]
name = "crater"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "crater"

[profile.dev]
opt-level = 0

[dependencies]
base64 = "0.21.5"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
crates-index = { version = "2.2.0", default-features = false, features = ["git-performance", "git-https"] }
crossbeam-channel = "0.5"
csv = "1.0.2"
docsrs-metadata = { git = "https://github.com/rust-lang/docs.rs/" }
dotenv = "0.15"
failure = "0.1.3"
flate2 = "1"
zstd = "0.13.0"
http = "0.2"
hyper = "0.14"
lazy_static = "1.0"
mime = "0.3.1"
minifier = { version = "0.3", features = ["html"] }
r2d2 = "0.8.2"
rusqlite = { version = "0.29.0", features = ["chrono", "functions", "bundled"] }
rand = "0.8"
regex = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "1.1.0"
clap = { version = "4", features = ["derive"] }
tar = "0.4.36"
tempfile = "3.0.0"
tera = "1.19.1"
toml = "0.8.6"
url = "2"
walkdir = "2"
warp = "0.3"
log = "0.4.6"
env_logger = "0.10.0"
hmac = "0.12"
sha-1 = "0.10"
rust_team_data = { git = "https://github.com/rust-lang/team" }
systemstat = "0.1.11"
rustwide = { version = "0.16.0", features = ["unstable", "unstable-toolchain-ci"] }
percent-encoding = "2.1.0"
remove_dir_all = "0.7"
ctrlc = "3.1.3"
prometheus = "0.13.3"
cargo_metadata = "0.18.1"
indexmap = { version = "2.0.2", features = ["serde"] }
tokio = "1.24"
aws-sdk-s3 = "1.7"
aws-config = { version = "1", features = ["behavior-version-latest"] }
thiserror = "1.0.38"
nix = { version = "0.27.1", features = ["mman", "resource"] }

[dev-dependencies]
assert_cmd = "2.0.4"
difference = "2.0.0"
predicates = "3.0.4"
