[package]
name = "crater"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "crater"

[profile.dev]
opt-level = 0

[profile.release]
strip = false

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.7"
base64 = "0.21.5"
bytes = "1"
cargo_metadata = "0.18.1"
cargo-util-schemas = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crates-index = { version = "2.2.0", default-features = false, features = [
    "git-performance",
    "git-https",
    "parallel",
] }
crossbeam-channel = "0.5"
csv = "1.0.2"
ctrlc = "3.1.3"
docsrs-metadata = { git = "https://github.com/rust-lang/docs.rs/" }
dotenv = "0.15"
env_logger = "0.10.0"
flate2 = "1"
hmac = "0.12"
http = "0.2"
hyper = "0.14"
indexmap = { version = "2.0.2", features = ["serde"] }
lazy_static = "1.0"
log = "0.4.6"
mime = "0.3.1"
minifier = { version = "0.3", features = ["html"] }
nix = { version = "0.27.1", features = ["mman", "resource"] }
percent-encoding = "2.1.0"
prometheus = "0.13.3"
r2d2 = "0.8.2"
rand = "0.8"
rayon = "1.10"
regex = "1.0"
remove_dir_all = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.32.1", features = ["chrono", "functions", "bundled"] }
rust_team_data = { git = "https://github.com/rust-lang/team" }
rustwide = { version = "0.19.3", features = [
    "unstable",
    "unstable-toolchain-ci",
] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "1.1.0"
sha-1 = "0.10"
systemstat = "0.1.11"
tar = "0.4.36"
tempfile = "3.0.0"
tera = "1.19.1"
thiserror = "1.0.38"
tokio = "1.24"
toml = "0.8.6"
url = { version = "2", features = ["serde"] }
walkdir = "2"
warp = "0.3"
zstd = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.4"
difference = "2.0.0"
predicates = "3.0.4"
