[package]
name = "rustwide"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.3"
futures = "0.1.13"
log = "0.4.6"
tokio = "0.1.11"
tokio-process = "0.2.3"
nix = "0.11.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
scopeguard = "1.0.0"
lazy_static = "1.0.0"
winapi = "0.3"
tempfile = "3.0.0"
reqwest = "0.9"
