[package]
name = "docs-rs-features"
version = "0.1.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
features = ["docs_rs_feature"]

[features]
docs_rs_feature = []
